--- a/backend/package.json
+++ b/backend/package.json
@@ -8,10 +8,11 @@
     "dev": "nodemon src/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "sequelize": "^6.35.1",
-    "sqlite3": "^5.1.6",
-    "dotenv": "^16.4.5"
+    "sqlite3": "^5.1.6"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
